Learned how to embed equations using LaTeX syntax

--- a/Module 2 Rmd 1.Rmd
+++ b/Module 2 Rmd 1.Rmd
@@ -63,9 +63,10 @@ plot(pressure)
 
 ## Insert Tables
 
-```{r}
+```{r cars-table, echo = FALSE}
 
-knitr::kable(head(cars))
+knitr::kable(head(cars),
+             caption = "Top 6 Rows of Cars Data Set")
 
 ```
 
